refactored a lot - matches implementation almost working